<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Files" />
        <item
            android:id="@+id/nav_cam_ocr"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Scan" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/About" />
        <item
        android:id="@+id/nav_scanner"
        android:icon="@drawable/ic_baseline_scanner_24"
        android:title="@string/barcode" />
    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/languageEnglish"
            android:icon="@drawable/language"
            android:title="@string/English"

            />
        <item
            android:id="@+id/languageFrench"
            android:icon="@drawable/language"
            android:title="@string/French"
            >

        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/Logout"/>
    </group>
</menu>
