<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginRight="16dp"
        android:text="@string/read" />

    <TextView
        android:id="@+id/text_value"
        android:layout_width="387dp"
        android:layout_height="227dp"
        android:layout_below="@+id/status_message"
        android:layout_alignEnd="@+id/status_message"
        android:layout_alignRight="@+id/status_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginRight="-8dp"
        android:background="#4C4B4B"
        android:gravity="center"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/read_text"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="429dp"
        android:layout_marginEnd="120dp"
        android:text="@string/scan"
        android:textColor="@color/white"
        android:background="#4C4B4B"/>

    <CheckBox
        android:id="@+id/auto_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_value"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="62dp"
        android:checked="true"
        android:text="@string/auto_focus" />

    <CheckBox
        android:id="@+id/use_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:checked="false"
        android:text="@string/use_flash" />

    <Button
        android:id="@+id/saveData"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="120dp"
        android:text="@string/save"
        android:background="#4C4B4B"
        android:textColor="@color/white"/>

</RelativeLayout>
